Operation: GetLaboratories
